[tool.poetry]
name = "linktious"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
attrdict = "^2.0.1"
sentry-sdk = "^0.19.5"
python-json-logger = "^2.0.1"
python-multipart = "^0.0.5"
jedi = "0.17.2"
SQLAlchemy = "^1.4.7"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
asynctest = "^0.13.0"
ipython = "^7.19.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "linktious.app:start"
